--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="setting">
               <i class="fa fa-cog" aria-hidden="true"></i>
           </div>
-          <h3 class="heading text-3xl">Journal Entry/Add</h3>
+          <h3 class="heading text-3xl">Journal Entries</h3>
       </div>
       <div class="journal-entry-wrapper">
           <div class="titles">
