Added : delete all list event

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <label class="title title-actions py-2 border-b-2 border-gray-200 border-solid w-full pl-2">Actions</label>
           <div class="Action-icons flex flex-col md:flex-row gap-1 text-sm py-2 pl-2">
             <div class="delete-icon flex justify-center">
-              <div class="item-delete btn-small-danger">
+              <div class="deleteAll btn-small-danger">
                 <i class="fa-solid fa-x"></i>
               </div>
             </div>
@@ -64,7 +64,7 @@
         <div class="journalItems-wrapper flex flex-col gap-8">
           <div class="collective-dataLists w-full flex pl-2 py-2 border-gray-200 border-solid border text-lg font-semibold">
             <div class="flex w-1/5">
-              <div class="item-delete btn-small-danger">
+              <div class="all-items-delete btn-small-danger">
                 <i class="fa-solid fa-x"></i>
               </div>
             </div>
