Added : insert new list as first child or last child when event occurs

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
               </div>
             </div>
             <div class="insert-icons flex gap-1">
-              <div class="item-add-up btn-small-primary">
+              <div class="add-list-top btn-small-primary">
                 <i class="fa fa-caret-up" aria-hidden="true"></i>
               </div>
-              <div class="item-add-down btn-small-primary">
+              <div class="add-list-bottom btn-small-primary">
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
             </div>
